reordering document sections towards workflow

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -14,17 +14,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b65e489-ce4a-4547-92f3-93bf1736f382",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "99dc2a4f-80bd-4998-8f36-a31d4ced415a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathToluene = \"20210511/092 2021 Toluol\"\n",
-    "pathBuffer = \"20210511/093 2021 Wasser\"\n",
-    "pathSample = \"20210511/094 2021 PS-Standard 1zu1000\"\n",
-    "#pathSample = \"20210511/096 2021 PS-Standard 1zu10000\"\n",
-    "#pathSample = \"20210511/097 2021 PS-Standard 1zu50000\"\n",
+    "basePath = r\"/Users/somebody\"\n",
+    "pathToluene = basePath+\"/092 2021 Toluol\"\n",
+    "pathBuffer = basePath+\"/093 2021 Wasser\"\n",
+    "pathSample = basePath+\"/094 2021 PS-Standard 1zu1000\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ddfa087-ad51-43bb-b25b-91251ac11407",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Refractive Index and density of particles\n",
+    "- **Polypropylene (PP)**: 1.492 and 0.91 g/mL  \n",
+    "  ( https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592 )\n",
+    "- **Polystyrene (PS)**: 1.593 and 1.05 g/mL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91ba324c-5ea8-466c-8cee-94bc4889a7a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for Polypropylene, PS\n",
     "refracParticle = 1.593\n",
     "densityParticle = 1.05*1e6 # g/m^3"
@@ -32,13 +61,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ddfa087-ad51-43bb-b25b-91251ac11407",
+   "id": "bb83c61e-d297-4f50-9462-420f3a8d6948",
    "metadata": {},
    "source": [
-    "### Refractive Index and density of\n",
-    "- **Polypropylene (PP)**: 1.492 and 0.91 g/mL  \n",
-    "  ( https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592 )\n",
-    "- **Polystyrene (PS)**: 1.593 and 1.05 g/mL"
+    "### CONTIN parameters to adjust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97feb422-cff3-4921-9561-04457a95895d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sizeRangeM = (1e-9, 200e-9)\n",
+    "continConfig = dict(recalc=True,\n",
+    "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
+    "    transformData=True, baselineCoeffs=0, # N_L\n",
+    "    # weighs noise level of data points accordinly for photon correlation spectroscopy\n",
+    "    # where the variance of Y is proportional to (Y**2+1)/(4*Y**2)\n",
+    "    # (from contin.for, line 1430)\n",
+    "    weighResiduals=True,\n",
+    ")"
    ]
   },
   {
@@ -46,7 +90,7 @@
    "id": "2b38af7d-905a-4221-9934-b7fd3cdcb450",
    "metadata": {},
    "source": [
-    "## More parameters to adjust"
+    "### More parameters to adjust"
    ]
   },
   {
@@ -69,7 +113,7 @@
    "id": "84c4276b-d116-46e2-8cd3-265d139de75b",
    "metadata": {},
    "source": [
-    "## Select measurement files for Toluene, Buffer and Sample"
+    "### Select measurement files for Toluene, Buffer and Sample"
    ]
   },
   {
@@ -122,10 +166,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ecc73e52-fc3f-4372-b0b7-69f4161c7e3e",
+   "metadata": {},
+   "source": [
+    "## No further parameters to adjust beyond this line\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e82e7d8e-5baf-477e-a853-67b53075657b",
    "metadata": {},
    "source": [
-    "### Read DLS intensity (count rate) and normalize its scaling across measurements"
+    "## Read DLS intensity (count rate) and normalize its scaling across measurements"
    ]
   },
   {
@@ -255,10 +308,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "edd0fb62-c976-4fd0-8617-23ef5a76de96",
+   "metadata": {},
+   "source": [
+    "## Get the size distribution\n",
+    "\n",
+    "**According to Malvern:**  \n",
+    "*\"The first order result from a DLS experiment is an intensity distribution of particle sizes. The intensity distribution is naturally weighted according to the scattering intensity of each particle fraction or family. For biological materials or polymers the particle scattering intensity is proportional to the square of the molecular weight.\"*  \n",
+    "( https://www.chem.uci.edu/~dmitryf/manuals/Fundamentals/DLS%20terminology.pdf )\n",
+    "\n",
+    "**Check:**  \n",
+    "[The CONTIN algorithm and its application to determine the size distribution of microgel suspensions ](https://doi.org/10.1063/1.4921686)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fecf4ba-cc74-46a8-91c9-7a4920ef4dd0",
+   "metadata": {},
+   "source": [
+    "### Run CONTIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a4baf2-5f3b-4155-893c-b89047fd2095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import updatedDict\n",
+    "continConfigs = [updatedDict(continConfig, 'angle', angle)\n",
+    "                 for angle in getAngles(particleData)]\n",
+    "#continConfigs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9c60564-15d0-47a3-865d-f93ef854e94d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from analyse_dls_with_contin.contin import runContinOverFiles\n",
+    "resultDirs = runContinOverFiles(particleFiles, continConfigs, nthreads=None)\n",
+    "resultDirs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "daaa083e-b677-4621-bce1-a5e79b9f56d7",
    "metadata": {},
    "source": [
-    "## The differential scattering cross section using [miepython](https://miepython.readthedocs.io/en/latest/index.html)\n",
+    "## The differential scattering cross section\n",
+    "Using [miepython](https://miepython.readthedocs.io/en/latest/index.html):\n",
     "\n",
     "See also https://miepython.readthedocs.io/en/latest/03_angular_scattering.html#Differential-Scattering-Cross-Section  \n",
     "cites [Wiscombe, W. J. (1979). Mie Scattering Calculations. doi:10.5065/D6ZP4414](https://opensky.ucar.edu/islandora/object/technotes:232)"
@@ -298,76 +400,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed14505-e854-4ad3-a626-f6efa25ffe75",
-   "metadata": {},
-   "source": [
-    "## Get the size distribution\n",
-    "\n",
-    "**According to Malvern:**  \n",
-    "*\"The first order result from a DLS experiment is an intensity distribution of particle sizes. The intensity distribution is naturally weighted according to the scattering intensity of each particle fraction or family. For biological materials or polymers the particle scattering intensity is proportional to the square of the molecular weight.\"*  \n",
-    "( https://www.chem.uci.edu/~dmitryf/manuals/Fundamentals/DLS%20terminology.pdf )\n",
-    "\n",
-    "**Check:**  \n",
-    "[The CONTIN algorithm and its application to determine the size distribution of microgel suspensions ](https://doi.org/10.1063/1.4921686)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "febeb3ba-98e3-47cf-9f84-9057612f45ba",
-   "metadata": {},
-   "source": [
-    "### Run CONTIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29873bd5-3149-428a-83d3-a287c1cd3257",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sizeRangeM = (1e-9, 200e-9)\n",
-    "continConfig = dict(recalc=True,\n",
-    "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
-    "    transformData=True, baselineCoeffs=0, # N_L\n",
-    "    # weighs noise level of data points accordinly for photon correlation spectroscopy\n",
-    "    # where the variance of Y is proportional to (Y**2+1)/(4*Y**2)\n",
-    "    # (from contin.for, line 1430)\n",
-    "    weighResiduals=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5d7c61d-8b78-4764-86b8-0de3f719d039",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import updatedDict\n",
-    "continConfigs = [updatedDict(continConfig, 'angle', angle)\n",
-    "                 for angle in getAngles(particleData)]\n",
-    "#continConfigs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37712a19-e2d3-428b-b9ed-bacd723ae182",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from analyse_dls_with_contin.contin import runContinOverFiles\n",
-    "resultDirs = runContinOverFiles(particleFiles, continConfigs, nthreads=None)\n",
-    "resultDirs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c9f7ce13-4379-4912-a6a6-7a36421a6eee",
    "metadata": {},
    "source": [
-    "### Rayleigh ratio\n",
+    "## Rayleigh ratio\n",
     "*\"The Rayleigh ratio of toluene is known from the literature and is equal to 1.35·10e−5·cm−1 at 632.8 nm and 25 °C (Brar and Verma 2011)\"*"
    ]
   },
@@ -379,6 +415,14 @@
    "outputs": [],
    "source": [
     "rayleighRatioToluene = 1.35e-5*1e2 # in 1/m at wavelength of 632.8 nm and 25 °C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e701c9c1-14c3-46a0-8b4e-502885cd5f97",
+   "metadata": {},
+   "source": [
+    "## Calculate and plot the concentration distributions"
    ]
   },
   {
@@ -454,6 +498,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b19fecc-278a-47b7-a9c7-675c6ffefdf7",
+   "metadata": {},
+   "source": [
+    "## Median concentration across all measured angles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ec8534a8-a02f-4245-859e-14d0d7a18477",
@@ -473,15 +525,6 @@
     "ax.set_ylabel(r\"Concentration in g / mL\")\n",
     "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "#plt.ylim(0,np.median(concentrations.cMass)*2);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a121c23b-8796-4580-8820-8fa3d71c2231",
-   "metadata": {},
-   "source": [
-    "### Notes for stabilizing concentration distribution within measurements of a single sample\n",
-    "- extract the largest peak from CONTIN and use that only"
    ]
   }
  ],
