final summary plots get horizontal line indicating the median value

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -514,14 +514,18 @@
    "source": [
     "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
     "ax = plt.subplot(1,2,1)\n",
+    "cNumberMed = np.median(concentrations.cNumbers)\n",
     "concentrations.plot('angle', 'cNumbers', marker='.', ax=ax, lw=0, grid=True,\n",
-    "    label=f\"Number concentration, median: {np.median(concentrations.cNumbers):.3g}\"+\" $mL^{-1}$\");\n",
+    "    label=f\"Number concentration, median: {cNumberMed:.3g}\"+\" $mL^{-1}$\");\n",
+    "ax.hlines(cNumberMed, concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\")\n",
     "ax.set_ylabel(r\"Concentration in 1 / mL\")\n",
     "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "#plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
     "ax = plt.subplot(1,2,2)\n",
+    "cMassMed = np.median(concentrations.cMass)\n",
     "concentrations.plot('angle', 'cMass', marker='.', ax=ax, lw=0, grid=True, color='green',\n",
-    "                    label=f\"Mass concentration, median: {np.median(concentrations.cMass):.3g}\"+\" $g\\,/\\,mL$\");\n",
+    "                    label=f\"Mass concentration, median: {cMassMed:.3g}\"+\" $g\\,/\\,mL$\");\n",
+    "ax.hlines(cMassMed, concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\", color='green')\n",
     "ax.set_ylabel(r\"Concentration in g / mL\")\n",
     "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "#plt.ylim(0,np.median(concentrations.cMass)*2);"
