added *fitRangeCrop* param to filter boundary artefacts/peaks from CONTIN results
- difficult to exclude reliably otherwise

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -75,6 +75,7 @@
    "outputs": [],
    "source": [
     "sizeRangeM = (1e-9, 200e-9)\n",
+    "fitRangeCrop = 30\n",
     "continConfig = dict(recalc=True,\n",
     "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
     "    transformData=True, baselineCoeffs=0, # N_L\n",
@@ -82,7 +83,11 @@
     "    # where the variance of Y is proportional to (Y**2+1)/(4*Y**2)\n",
     "    # (from contin.for, line 1430)\n",
     "    weighResiduals=True,\n",
-    ")"
+    ")\n",
+    "if fitRangeCrop > 0 and fitRangeCrop < 100:\n",
+    "    continConfig['fitRangeM'] = (continConfig['fitRangeM'][0]*(1-fitRangeCrop/100),\n",
+    "                                 continConfig['fitRangeM'][1]*(1+fitRangeCrop/100))\n",
+    "continConfig"
    ]
   },
   {
@@ -443,6 +448,16 @@
     "                     countRateScoreMax=1., uncertRatioMax=1., plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
+    "    if fitRangeCrop > 0 and fitRangeCrop < 100:\n",
+    "        # cropping distribution result by *fitRangeCrop* CONTIN parameter above\n",
+    "        # percentage of fit range width to ignore boundary peaks/artefacts on\n",
+    "        rmin = dfDistrib.radius.min()/(1-fitRangeCrop/100)\n",
+    "        rmax = dfDistrib.radius.max()/(1+fitRangeCrop/100)\n",
+    "        #print(rmin, rmax)\n",
+    "        rmin = np.argwhere(dfDistrib.radius.values > rmin)[0][0]\n",
+    "        rmax = np.argwhere(dfDistrib.radius.values < rmax)[-1][0]\n",
+    "        #print(rmin, rmax)\n",
+    "        dfDistrib = dfDistrib[rmin:rmax+1]\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
     "    if abs(1.-varmap.get('score', 1.0)) > countRateScoreMax:\n",
     "        return None, None, None # skip this one, data score too bad\n",
