added Polyethylene constants

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -44,7 +44,8 @@
     "### Refractive Index and density of particles\n",
     "- **Polypropylene (PP)**: 1.492 and 0.91 g/mL  \n",
     "  ( https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592 )\n",
-    "- **Polystyrene (PS)**: 1.593 and 1.05 g/mL"
+    "- **Polystyrene (PS)**: 1.593 and 1.05 g/mL\n",
+    "- **Polyethylene (PE)**: 1.51 and 0.92 g/mL"
    ]
   },
   {
@@ -54,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for Polypropylene, PS\n",
-    "refracParticle = 1.593\n",
-    "densityParticle = 1.05*1e6 # g/m^3"
+    "# for Polypropylene, PE\n",
+    "refracParticle = 1.51\n",
+    "densityParticle = 0.92*1e6 # g/m^3"
    ]
   },
   {
