handle missing results/distribs without stopping

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -459,10 +459,12 @@
     "        rmax = np.argwhere(dfDistrib.radius.values < rmax)[-1][0]\n",
     "        #print(rmin, rmax)\n",
     "        dfDistrib = dfDistrib[rmin:rmax+1]\n",
+    "    if all(dfDistrib.distrib == 0.):\n",
+    "        return None, None, None # skip this one, no distribution found\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
     "    if abs(1.-varmap.get('score', 1.0)) > countRateScoreMax:\n",
     "        return None, None, None # skip this one, data score too bad\n",
-    "    if distrib.uncertRatioMedian(distrib.peaks[0]) > uncertRatioMax:\n",
+    "    if not len(distrib.peaks) or distrib.uncertRatioMedian(distrib.peaks[0]) > uncertRatioMax:\n",
     "        return None, None, None # skip this one, distribution peak uncertainty to large\n",
     "    x, y, u = distrib.peakData(distrib.peaks[0])\n",
     "    theta = varmap['angle']\n",
@@ -528,23 +530,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
-    "ax = plt.subplot(1,2,1)\n",
-    "cNumberMed = np.median(concentrations.cNumbers)\n",
-    "concentrations.plot('angle', 'cNumbers', marker='.', ax=ax, lw=0, grid=True,\n",
-    "    label=f\"Number concentration, median: {cNumberMed:.3g}\"+\" $mL^{-1}$\");\n",
-    "ax.hlines(cNumberMed, concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\")\n",
-    "ax.set_ylabel(r\"Concentration in 1 / mL\")\n",
-    "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "#plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
-    "ax = plt.subplot(1,2,2)\n",
-    "cMassMed = np.median(concentrations.cMass)\n",
-    "concentrations.plot('angle', 'cMass', marker='.', ax=ax, lw=0, grid=True, color='green',\n",
-    "                    label=f\"Mass concentration, median: {cMassMed:.3g}\"+\" $g\\,/\\,mL$\");\n",
-    "ax.hlines(cMassMed, concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\", color='green')\n",
-    "ax.set_ylabel(r\"Concentration in g / mL\")\n",
-    "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "#plt.ylim(0,np.median(concentrations.cMass)*2);"
+    "if not len(concentrations):\n",
+    "    print(\"No concentrations found!\")\n",
+    "else:\n",
+    "    createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
+    "    ax = plt.subplot(1,2,1)\n",
+    "    cNumberMed = np.median(concentrations.cNumbers)\n",
+    "    concentrations.plot('angle', 'cNumbers', marker='.', ax=ax, lw=0, grid=True,\n",
+    "        label=f\"Number concentration, median: {cNumberMed:.3g}\"+\" $mL^{-1}$\");\n",
+    "    ax.hlines(cNumberMed, concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\")\n",
+    "    ax.set_ylabel(r\"Concentration in 1 / mL\")\n",
+    "    ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
+    "    #plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
+    "    ax = plt.subplot(1,2,2)\n",
+    "    cMassMed = np.median(concentrations.cMass)\n",
+    "    concentrations.plot('angle', 'cMass', marker='.', ax=ax, lw=0, grid=True, color='green',\n",
+    "                        label=f\"Mass concentration, median: {cMassMed:.3g}\"+\" $g\\,/\\,mL$\");\n",
+    "    ax.hlines(cMassMed, concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\", color='green')\n",
+    "    ax.set_ylabel(r\"Concentration in g / mL\")\n",
+    "    ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
+    "    #plt.ylim(0,np.median(concentrations.cMass)*2);"
    ]
   }
  ],
