comment added, fit range increased

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -75,8 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sizeRangeM = (1e-9, 200e-9)\n",
-    "fitRangeCrop = 30\n",
+    "sizeRangeM = (1e-9, 300e-9)\n",
+    "fitRangeCrop = 30 # percentage of fit range width to ignore boundary peaks/artefacts in CONTIN results\n",
     "continConfig = dict(recalc=True,\n",
     "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
     "    transformData=True, baselineCoeffs=0, # N_L\n",
