plot count rate (scattering intensity) of all angles

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -314,6 +314,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9725c0fa-6b31-4054-8a46-116ead647a6d",
+   "metadata": {},
+   "source": [
+    "## Count Rate (scattering intensity) across all measured angles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d99384-448e-4561-812e-9b7dfbc3a34c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotCountRateAllAngles(summaryData):\n",
+    "    createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
+    "    angles = getAngles(summaryData)\n",
+    "    crmean = crMean(summaryData)\n",
+    "    plt.plot(angles, crmean, marker='o', lw=1, label=summaryData['name']);\n",
+    "    plt.grid(); plt.legend();\n",
+    "    plt.ylabel(r\"Count Rate (kHz)\")\n",
+    "    plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
+    "plotCountRateAllAngles(particleData)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edd0fb62-c976-4fd0-8617-23ef5a76de96",
    "metadata": {},
    "source": [
