plot count rate, ie. intensity of buffer and toluene along with particle data

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -317,7 +317,9 @@
    "id": "9725c0fa-6b31-4054-8a46-116ead647a6d",
    "metadata": {},
    "source": [
-    "## Count Rate (scattering intensity) across all measured angles"
+    "## Count Rate (scattering intensity) across all measured angles\n",
+    "\n",
+    "Covering particle, Toluene and Buffer/Water measurements"
    ]
   },
   {
@@ -327,15 +329,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plotCountRateAllAngles(summaryData):\n",
-    "    createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
+    "import matplotlib.pyplot as plt\n",
+    "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
+    "def plotCountRateAllAngles(summaryData, newfig=False, **kwargs):\n",
+    "    if newfig:\n",
+    "        createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
     "    angles = getAngles(summaryData)\n",
     "    crmean = crMean(summaryData)\n",
-    "    plt.plot(angles, crmean, marker='o', lw=1, label=summaryData['name']);\n",
-    "    plt.grid(); plt.legend();\n",
+    "    plt.plot(angles, crmean, marker='o', lw=1, label=summaryData['name'], **kwargs);\n",
     "    plt.ylabel(r\"Count Rate (kHz)\")\n",
     "    plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "plotCountRateAllAngles(particleData)"
+    "\n",
+    "plotCountRateAllAngles(particleData, newfig=True, color=\"black\")\n",
+    "handles1, labels1 = plt.gca().get_legend_handles_labels()\n",
+    "ax2 = plt.gca().twinx()\n",
+    "plotCountRateAllAngles(bufferData)\n",
+    "plotCountRateAllAngles(tolueneData)\n",
+    "handles2, labels2 = plt.gca().get_legend_handles_labels()\n",
+    "# final plot config with combined legend\n",
+    "plt.legend(handles1+handles2, labels1+labels2)\n",
+    "plt.grid();"
    ]
   },
   {
