compensating count rates by attenuation levels read from ASC file
- tested with PP data 015 2022

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -232,7 +232,7 @@
     "               summary[colname] = df[colname].mean()\n",
     "    # all sets of angles found in files in this directory, a set can have unique entries only\n",
     "    dirAngles = set([tuple(fileData['angles']) for fileData in dirData])\n",
-    "    countRates, countRateMeans = [], []\n",
+    "    countRates, countRateMeans, attenuation = [], [], []\n",
     "    for angles in dirAngles:\n",
     "        # concatenate countrates (time series) of the same set of angles only\n",
     "        # averaging count rates over time later\n",
@@ -242,11 +242,18 @@
     "        countRateMeans.append(pd.concat([fileData.get('meancr', pd.DataFrame())\n",
     "                                     for fileData in dirData\n",
     "                                     if tuple(fileData['angles']) == angles]))\n",
+    "        attenuation.append(pd.concat([fileData.get('attenuation', pd.DataFrame())\n",
+    "                                     for fileData in dirData\n",
+    "                                     if tuple(fileData['angles']) == angles]))\n",
     "    # count rate mean over all measurements (must be at same angles!)\n",
     "    countRates = pd.concat(countRates, axis=1)*monitorDiodeScale\n",
     "    countRateMeans = pd.concat(countRateMeans, axis=1)*monitorDiodeScale\n",
     "    countRates.sort_index(axis=1, inplace=True)\n",
     "    countRateMeans.sort_index(axis=1, inplace=True)\n",
+    "    # compensating for attenuation, expected to be identical across all measurements\n",
+    "    attenuationInv = 1/pd.concat(attenuation, axis=1).mean()\n",
+    "    countRates *= attenuationInv\n",
+    "    countRateMeans *= attenuationInv\n",
     "    def seriesToDict(series, lbl):\n",
     "        return {\"{}{:.0f}\".format(lbl, key): value for key, value in zip(series.index, series.values)}\n",
     "    if not countRates.empty:\n",
