do not invert count rate score for comparing with countRateScoreMax
- more intuitive to use this way

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -508,7 +508,7 @@
     "    if all(dfDistrib.distrib == 0.):\n",
     "        return None, None, None # skip this one, no distribution found\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
-    "    if abs(1.-varmap.get('score', 1.0)) > countRateScoreMax:\n",
+    "    if varmap.get('score', 1.0) > countRateScoreMax:\n",
     "        return None, None, None # skip this one, data score too bad\n",
     "    if not len(distrib.peaks) or distrib.uncertRatioMedian(distrib.peaks[0]) > uncertRatioMax:\n",
     "        return None, None, None # skip this one, distribution peak uncertainty to large\n",
