Return distrib moments and params when calculating concentrations

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -403,7 +403,7 @@
    "source": [
     "from analyse_dls_with_contin.contin import runContinOverFiles\n",
     "resultDirs = runContinOverFiles(particleFiles, continConfigs, nthreads=None)\n",
-    "resultDirs"
+    "#resultDirs"
    ]
   },
   {
@@ -506,12 +506,12 @@
     "        #print(rmin, rmax)\n",
     "        dfDistrib = dfDistrib[rmin:rmax+1]\n",
     "    if all(dfDistrib.distrib == 0.):\n",
-    "        return None, None, None # skip this one, no distribution found\n",
+    "        return {} # skip this one, no distribution found\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
     "    if varmap.get('score', 1.0) > countRateScoreMax:\n",
-    "        return None, None, None # skip this one, data score too bad\n",
+    "        return {} # skip this one, data score too bad\n",
     "    if not len(distrib.peaks) or distrib.uncertRatioMedian(distrib.peaks[0]) > uncertRatioMax:\n",
-    "        return None, None, None # skip this one, distribution peak uncertainty to large\n",
+    "        return {} # skip this one, distribution peak uncertainty to large\n",
     "    x, y, u = distrib.peakData(distrib.peaks[0])\n",
     "    theta = varmap['angle']\n",
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
@@ -531,10 +531,9 @@
     "    if plot:\n",
     "        createFigure(300, 2, quiet=True, tight_layout = {'pad': 0.05});\n",
     "        plt.subplot(3,2,1); plt.grid()\n",
-    "        distPar, _ = distrib.peakDistrPar(plotAxes=[plt.gca()], showFullRange=True)\n",
+    "        distPar, moments = distrib.peakDistrPar(plotAxes=[plt.gca()], showFullRange=True)\n",
     "        plt.title(continResultDir.name+\"\\n(\"+(f\"score: {varmap['score']}, \" if 'score' in varmap else \"\")\n",
     "                  +\"$U_{ratio}$: \"+f\"{distrib.uncertRatioMedian(distrib.peaks[0]):.3f})\")\n",
-    "\n",
     "        plt.subplot(3,2,2); plt.grid()\n",
     "        plt.semilogy(x, sigma_sca)\n",
     "        plt.title(\"Diff. scattering cross section (m$^2$/sr)\")\n",
@@ -552,13 +551,26 @@
     "        handles2, labels2 = plt.gca().get_legend_handles_labels()\n",
     "        plt.xlim(plotRangeX);\n",
     "        plt.legend(handles1+handles2, labels1+labels2)\n",
-    "    return theta, concentrationNumbersSum, concentrationMassSum\n",
+    "    # Return concentration values determined along with Moments and LogNorm params\n",
+    "    return ({\"angle\": theta, \"cNumbers\": concentrationNumbersSum, \"cMass\": concentrationMassSum}\n",
+    "            | moments[0] | dict(zip([\"N\", \"s\", \"Rmedian\"], distPar[0])))\n",
     "\n",
-    "concentrations = pd.DataFrame([getConcentration(dn, particleData, bufferData, tolueneData,\n",
-    "                                                countRateScoreMax=countRateScoreMax, uncertRatioMax=uncertRatioMax,\n",
-    "                                                plotRangeX=sizeRangeM, plot=True)\n",
-    "                               for dn in sorted(resultDirs)],\n",
-    "                              columns=(\"angle\", \"cNumbers\", \"cMass\")).dropna()"
+    "concentrations = [getConcentration(dn, particleData, bufferData, tolueneData,\n",
+    "                                   countRateScoreMax=countRateScoreMax, uncertRatioMax=uncertRatioMax,\n",
+    "                                   plotRangeX=sizeRangeM, plot=True)\n",
+    "                  for dn in sorted(resultDirs)]\n",
+    "#concentrations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f7061ca-bf52-4647-839d-798efbc35a20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concentrations = pd.DataFrame(concentrations).dropna()\n",
+    "concentrations"
    ]
   },
   {
