--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -588,11 +588,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import fmtErr\n",
     "if not len(concentrations):\n",
     "    print(\"No concentrations found!\")\n",
     "else:\n",
-    "    createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
-    "    ax = plt.subplot(1,2,1)\n",
+    "    createFigure(300, 1, quiet=True, tight_layout = {'w_pad': 2});\n",
+    "    ax = plt.subplot(3,1,1)\n",
     "    cNumberMed = np.median(concentrations.cNumbers)\n",
     "    concentrations.plot('angle', 'cNumbers', marker='.', ax=ax, lw=0, grid=True,\n",
     "        label=f\"Number concentration, median: {cNumberMed:.3g}\"+\" $mL^{-1}$\");\n",
@@ -600,20 +601,27 @@
     "    ax.set_ylabel(r\"Concentration in 1 / mL\")\n",
     "    ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "    #plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
-    "    ax = plt.subplot(1,2,2)\n",
+    "    ax = plt.subplot(3,1,2)\n",
     "    cMassMed = np.median(concentrations.cMass)\n",
     "    concentrations.plot('angle', 'cMass', marker='.', ax=ax, lw=0, grid=True, color='green',\n",
-    "                        label=f\"Mass concentration, median: {cMassMed:.3g}\"+\" $g\\,/\\,mL$\");\n",
+    "        label=f\"Mass concentration, median: {cMassMed:.3g}\"+\" $g\\,/\\,mL$\");\n",
     "    ax.hlines(cMassMed, concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\", color='green')\n",
     "    ax.set_ylabel(r\"Concentration in g / mL\")\n",
     "    ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "    #plt.ylim(0,np.median(concentrations.cMass)*2);"
+    "    #plt.ylim(0,np.median(concentrations.cMass)*2);\n",
+    "    ax = plt.subplot(3,1,3)\n",
+    "    mean = np.array((concentrations['mean'].mean(), concentrations['mean'].std()))\n",
+    "    concentrations.plot('angle', 'mean', marker='.', ax=ax, lw=0, grid=True, color='red',\n",
+    "        label=f\"Radius mean of means: {fmtErr(*mean*1e9)} nm\");\n",
+    "    ax.hlines(mean[0], concentrations.angle.min(), concentrations.angle.max(), linestyles=\"dashed\", color='red')\n",
+    "    ax.set_ylabel(r\"Radius mean in nm\")\n",
+    "    ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -627,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
