simpler forwarding of distribution parameters into pandas DataFrame
- because of switching to dict-based logNormPars/distrPars in jupyter_analysis_tools

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -551,9 +551,9 @@
     "        handles2, labels2 = plt.gca().get_legend_handles_labels()\n",
     "        plt.xlim(plotRangeX);\n",
     "        plt.legend(handles1+handles2, labels1+labels2)\n",
-    "    # Return concentration values determined along with Moments and LogNorm params\n",
+    "    # Return concentration values determined along with Moments and LogNorm params for the first peak\n",
     "    return ({\"angle\": theta, \"cNumbers\": concentrationNumbersSum, \"cMass\": concentrationMassSum}\n",
-    "            | moments[0] | dict(zip([\"N\", \"s\", \"Rmedian\"], distPar[0])))\n",
+    "            | moments[0] | distPar[0])\n",
     "\n",
     "concentrations = [getConcentration(dn, particleData, bufferData, tolueneData,\n",
     "                                   countRateScoreMax=countRateScoreMax, uncertRatioMax=uncertRatioMax,\n",
