using actual testdata from subrepo *analyse_dls_with_contin*

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -28,10 +28,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basePath = r\"/Users/somebody\"\n",
-    "pathToluene = basePath+\"/092 2021 Toluol\"\n",
-    "pathBuffer = basePath+\"/093 2021 Wasser\"\n",
-    "pathSample = basePath+\"/094 2021 PS-Standard 1zu1000\""
+    "basePath = r\"analyse_dls_with_contin/testdata\"\n",
+    "pathToluene = basePath+\"/toluene\"\n",
+    "pathBuffer = basePath+\"/water\"\n",
+    "pathSample = basePath+\"/mw002-03\""
    ]
   },
   {
@@ -55,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for Polypropylene, PE\n",
-    "refracParticle = 1.51\n",
-    "densityParticle = 0.92*1e6 # g/m^3"
+    "# for Polypropylene, PP\n",
+    "refracParticle = 1.492\n",
+    "densityParticle = 0.91*1e6 # g/m^3"
    ]
   },
   {
@@ -76,7 +76,8 @@
    "outputs": [],
    "source": [
     "sizeRangeM = (1e-9, 300e-9)\n",
-    "fitRangeCrop = 30 # percentage of fit range width to ignore boundary peaks/artefacts in CONTIN results\n",
+    "fitRangeCrop = 20 # percentage of fit range width to ignore boundary peaks/artefacts in CONTIN results\n",
+    "                  # size range is extended by this amount\n",
     "continConfig = dict(recalc=True,\n",
     "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
     "    transformData=True, baselineCoeffs=0, # N_L\n",
@@ -164,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
+    "#particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
     "particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
     "assert len(particleFiles), \"No files for the particles selected!\"\n",
     "printFileList(particleFiles, numParts=10)"
@@ -480,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9318f88b-1f20-459b-bd6f-b98dddf94f02",
+   "id": "07c3c40f-ae97-413d-889c-1763a64cd24a",
    "metadata": {},
    "outputs": [],
    "source": [
