fixed file meta data key

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -273,7 +273,7 @@
     "    #print(dirData)\n",
     "    # create a DataFrame from that\n",
     "    columns = set([key for fileData in dirData for key in fileData.keys()\n",
-    "                   if key not in (\"correlation\", \"countrate\", \"angles\", \"meancr\", \"sampleName\", \"filename\")])\n",
+    "                   if key not in (\"correlation\", \"countrate\", \"angles\", \"meancr\", \"Samplename\", \"filename\")])\n",
     "    df = pd.DataFrame({key: [fileData.get(key, None) for fileData in dirData]\n",
     "                       for key in columns})\n",
     "    name = '+'.join(list(set([Path(fn).parent.name for fn in files])))\n",
