docs(readme): intro text and required packages in requirements.txt with install instructions

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -1,16 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "5562d24b-deb5-4fae-a0a1-9255f3ffe02a",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ee6cecaa-1b88-42fd-8339-97a9673bc2c2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# [Nanoparticle number concentration measurements by multi-angle dynamic light scattering](https://doi.org/10.1007/s11051-020-04840-8)\n",
+       "\n",
+       "This Python implementation is based on:\n",
+       "\n",
+       "> Austin, J., Minelli, C., Hamilton, D. et al. Nanoparticle number concentration measurements by multi-angle dynamic light scattering. J Nanopart Res 22, 108 (2020).\n",
+       "> https://doi.org/10.1007/s11051-020-04840-8\n",
+       "\n",
+       "## Requirements\n",
+       "\n",
+       "Packages that are used here:\n",
+       "\n",
+       "- miepython\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# [Nanoparticle number concentration measurements by multi-angle dynamic light scattering](https://doi.org/10.1007/s11051-020-04840-8)\n",
-    "\n",
-    "This Python implementation is based on:\n",
-    "\n",
-    "> Austin, J., Minelli, C., Hamilton, D. et al. Nanoparticle number concentration measurements by multi-angle dynamic light scattering. J Nanopart Res 22, 108 (2020).\n",
-    "> https://doi.org/10.1007/s11051-020-04840-8"
+    "from IPython.display import Markdown as md\n",
+    "from pathlib import Path\n",
+    "md(Path(\"README.md\").read_text())"
    ]
   },
   {
