docs(intro): update from readme

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -20,9 +20,15 @@
        "\n",
        "## Requirements\n",
        "\n",
-       "Packages that are used here:\n",
+       "For packages that are used here and which might be missing the a clean default python installation or *venv*,\n",
+       "please see the [requirements](requirements.txt) file. Install the listed packages by running:\n",
        "\n",
-       "- miepython\n"
+       "    pip install -r requirements.txt\n",
+       "\n",
+       "## Problems & Help\n",
+       "\n",
+       "If there are any errors with the code, please look for existing similar reports and possible solutions\n",
+       "or open [a **new issue** on the project page](https://github.com/BAMresearch/particle_concentration_from_dls/issues).\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
