fix(notebook): jupyter_analysis_tools imports

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.datalocations import getDataDirs, getDataFiles, printFileList"
+    "from jupyter_analysis_tools.datalocations import getDataDirs, getDataFiles, printFileList"
    ]
   },
   {
@@ -484,7 +484,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
+    "from jupyter_analysis_tools.plotting import createFigure\n",
     "def plotCountRateAllAngles(summaryData, newfig=False, **kwargs):\n",
     "    if newfig:\n",
     "        createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
@@ -535,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import updatedDict\n",
+    "from jupyter_analysis_tools.utils import updatedDict\n",
     "continConfigs = [updatedDict(continConfig, 'angle', angle)\n",
     "                 for angle in getAngles(particleData)]\n",
     "#continConfigs"
@@ -688,7 +688,7 @@
    "outputs": [],
    "source": [
     "import miepython\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import isList\n",
+    "from jupyter_analysis_tools.utils import isList\n",
     "def diffScatteringCrossSection(radius, angles, wavelen, nMedium, verbose=False):\n",
     "    geometric_cross_section = np.pi * radius**2 * 1e-14 # cm**2\n",
     "    if not isList(angles):\n",
@@ -1122,8 +1122,8 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import (Distribution,\n",
+    "from jupyter_analysis_tools.plotting import createFigure\n",
+    "from jupyter_analysis_tools.distrib import (Distribution,\n",
     "    integrate, normalizeDistrib, findPeakRanges, findLocalMinima)\n",
     "from analyse_dls_with_contin.contin import getContinResults\n",
     "import numpy as np\n",
@@ -1802,7 +1802,7 @@
     }
    ],
    "source": [
-    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import fmtErr\n",
+    "from jupyter_analysis_tools.utils import fmtErr\n",
     "if not len(concentrations):\n",
     "    print(\"No concentrations found!\")\n",
     "else:\n",
