docs(notebook): constants for SiO2 added

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -78,7 +78,9 @@
     "- **Polypropylene (PP)**: 1.492 and 0.91 g/mL  \n",
     "  ( https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592 )\n",
     "- **Polystyrene (PS)**: 1.593 and 1.05 g/mL\n",
-    "- **Polyethylene (PE)**: 1.51 and 0.92 g/mL"
+    "- **Polyethylene (PE)**: 1.51 and 0.92 g/mL\n",
+    "- **SiO2 (Silicon dioxide, Silica, Quartz)**: 1.4570 and 2.196 (amorphous) g/mL  \n",
+    "  ( https://refractiveindex.info, Malitson 1965: n 0.21–6.7 µm, wavelen 632 nm )"
    ]
   },
   {
